Bug 1079 - __posix_memalign should not have malloc attribute
Summary: __posix_memalign should not have malloc attribute
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: libc (show other bugs)
Version: 2.3.5
: P2 normal
Target Milestone: ---
Assignee: Roland McGrath
URL:
Keywords:
Depends on:
Blocks: libc236
  Show dependency treegraph
 
Reported: 2005-07-18 01:09 UTC by Roland McGrath
Modified: 2005-07-19 03:30 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roland McGrath 2005-07-18 01:09:58 UTC
This trunk patch should go into the 2.3 branch:


2005-07-15  Andreas Jaeger  <aj@suse.de>

	* include/stdlib.h: Remove malloc attribute from __posix_memalign.
	* stdlib/stdlib.h: Likewise.
Comment 1 Sourceware Commits 2005-07-18 01:15:35 UTC
Subject: Bug 1079

CVSROOT:	/cvs/glibc
Module name:	libc
Branch: 	glibc-2_3-branch
Changes by:	roland@sources.redhat.com	2005-07-18 01:15:31

Modified files:
	stdlib         : stdlib.h 
	include        : stdlib.h 

Log message:
	2005-07-15  Andreas Jaeger  <aj@suse.de>
	
	[BZ #1079]
	* include/stdlib.h: Remove malloc attribute from __posix_memalign.
	* stdlib/stdlib.h: Likewise.

Patches:
http://sources.redhat.com/cgi-bin/cvsweb.cgi/libc/stdlib/stdlib.h.diff?cvsroot=glibc&only_with_tag=glibc-2_3-branch&r1=1.108&r2=1.108.2.1
http://sources.redhat.com/cgi-bin/cvsweb.cgi/libc/include/stdlib.h.diff?cvsroot=glibc&only_with_tag=glibc-2_3-branch&r1=1.35&r2=1.35.4.1

Comment 2 Roland McGrath 2005-07-19 03:30:31 UTC
This fix is now in the 2.3 branch as well as the trunk, and the problem should
be resolved as of the 2.3.6 release.