2005-07-15  Andreas Jaeger  <aj@suse.de>

[BZ #1079]
	* include/stdlib.h: Remove malloc attribute from __posix_memalign.
	* stdlib/stdlib.h: Likewise.